objects/MBE_Profile__c.object
<CustomObject>
    <fields>
        <fullName>AS_Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_BirthDate__c</fullName>
        <label>BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AS_BlogUrl__c</fullName>
        <label>BlogUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AS_BusinessDescription__c</fullName>
        <label>BusinessDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AS_BusinessDunsNumber__c</fullName>
        <label>BusinessDunsNumber</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_BusinessEstablishedDate__c</fullName>
        <label>BusinessEstablishedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AS_BusinessRevenue__c</fullName>
        <label>BusinessRevenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_BusinessTaxId__c</fullName>
        <label>BusinessTaxId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_BusinessTaxId_c__c</fullName>
        <label>BusinessTaxId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_CageCode__c</fullName>
        <label>CageCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_CellPhone__c</fullName>
        <label>CellPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AS_Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_DiversityType__c</fullName>
        <label>DiversityType</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AS_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AS_FaxNumber__c</fullName>
        <label>FaxNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AS_FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_HomeAddress1__c</fullName>
        <label>HomeAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HomeAddress2__c</fullName>
        <label>HomeAddress2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HomeCity__c</fullName>
        <label>HomeCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HomePhone__c</fullName>
        <label>HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AS_HomePoBox__c</fullName>
        <label>HomePoBox</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_HomeZip__c</fullName>
        <label>HomeZip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_ImageUrl__c</fullName>
        <label>Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AS_LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_NAICSCode6__c</fullName>
        <label>AS NAICS Codes6</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting/Tax/Audit, 541211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising, 541810</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appraisal Services, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits, 923130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Projects, 541330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash for Keys, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering/Food/Vending, 722320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Services, 561440</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Printing, 323111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services, 541690</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Credit Services, 561450</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Labor, 561110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Facilities &amp; Services, 238210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Services, 518210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities - Corporate Facilities &amp; Services, 238210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities - Real Estate, 531190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services, 541211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreclosure &amp; Bankruptcy Services, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative - Office Supplies, 333293</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative - Postage &amp; Courier, 492110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware, 332510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Data Services, 518210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Hardware, 332510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Software, 511210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Telecom, 517110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Firms, 922130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan and Mortgage Services, 522310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Processing, 522310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research, 541910</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Commercial Printing, 323111</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_NAICSCode7__c</fullName>
        <label>NAICS Codes7</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting/Tax/Audit, 541211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising, 541810</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appraisal Services, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits, 923130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Projects, 541330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash for Keys, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering/Food/Vending, 722320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Services, 561440</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Printing, 323111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services, 541690</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Credit Services, 561450</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Labor, 561110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Facilities &amp; Services, 238210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Services, 518210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities - Corporate Facilities &amp; Services, 238210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities - Real Estate, 531190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services, 541211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreclosure &amp; Bankruptcy Services, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative - Office Supplies, 333293</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative - Postage &amp; Courier, 492110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware, 332510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Data Services, 518210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Hardware, 332510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Software, 511210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Telecom, 517110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Firms, 922130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan and Mortgage Services, 522310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Processing, 522310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research, 541910</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Commercial Printing, 323111</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_NAICSCode8__c</fullName>
        <label>NAICS Codes8</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting/Tax/Audit, 541211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising, 541810</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appraisal Services, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits, 923130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Projects, 541330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash for Keys, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering/Food/Vending, 722320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Services, 561440</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Printing, 323111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services, 541690</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Credit Services, 561450</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Labor, 561110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Facilities &amp; Services, 238210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Services, 518210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities - Corporate Facilities &amp; Services, 238210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities - Real Estate, 531190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services, 541211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreclosure &amp; Bankruptcy Services, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative - Office Supplies, 333293</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative - Postage &amp; Courier, 492110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware, 332510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Data Services, 518210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Hardware, 332510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Software, 511210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Telecom, 517110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Firms, 922130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan and Mortgage Services, 522310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Processing, 522310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research, 541910</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Commercial Printing, 323111</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_NumberOfEmployees__c</fullName>
        <label>NumberOfEmployees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_PrimaryBusinessCategory1__c</fullName>
        <label>PrimaryBusinessCategory1</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing and Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining &amp; Oil &amp; Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation/Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate, Rental &amp; Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional, Scientific and Technical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure &amp; Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodations &amp; Food Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Services not related to Public Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pubic Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management of Companies &amp; Enterprises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative &amp; Support &amp; Waste Management &amp; Remediation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AS_ShippingAddress1__c</fullName>
        <label>ShippingAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_ShippingAddress2__c</fullName>
        <label>ShippingAddress2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_ShippingCity__c</fullName>
        <label>ShippingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_ShippingPhone__c</fullName>
        <label>ShippingPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AS_ShippingPoBox__c</fullName>
        <label>ShippingPoBox</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_ShippingState__c</fullName>
        <label>ShippingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_ShippingZipcode__c</fullName>
        <label>ShippingZipcode</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_WebsiteUrl__c</fullName>
        <label>Website Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AS_WorkAddress1__c</fullName>
        <label>WorkAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_WorkAddress2__c</fullName>
        <label>WorkAddress2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_WorkCity__c</fullName>
        <label>WorkCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_WorkPhone__c</fullName>
        <label>WorkPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AS_WorkZipCode__c</fullName>
        <label>WorkZipCode</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_WorkZip__c</fullName>
        <label>WorkZip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_Work_Country__c</fullName>
        <label>Work_Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States of America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_Work_States__c</fullName>
        <label>Work_States</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_shippingzip_c__c</fullName>
        <label>shippingzip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_non_WBENC_awards_received__c</fullName>
        <label>Any non-WBENC awards received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_Home_Country__c</fullName>
        <label>HomeCountry</label>
        <picklist>
            <picklistValues>
                <fullName>United States Of America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_Home_State__c</fullName>
        <label>HomeState</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_NAICSCode_1__c</fullName>
        <label>NAICS Codes1</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting/Tax/Audit, 541211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising, 541810</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appraisal Services, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits, 923130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Projects, 541330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash for Keys, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering/Food/Vending, 722320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Services, 561440</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Printing, 323111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services, 541690</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Credit Services, 561450</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Labor, 561110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Facilities &amp; Services, 238210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Services, 518210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities - Corporate Facilities &amp; Services, 238210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities - Real Estate, 531190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services, 541211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreclosure &amp; Bankruptcy Services, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative - Office Supplies, 333293</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative - Postage &amp; Courier, 492110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware, 332510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Data Services, 518210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Hardware, 332510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Software, 511210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Telecom, 517110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Firms, 922130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan and Mortgage Services, 522310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Processing, 522310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research, 541910</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Commercial Printing, 323111</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>